[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-graph-4d"
version = "0.1.0"
description = "3D/4D visualization tool for C++ codebase architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MiangChen"}
]
keywords = ["visualization", "cpp", "architecture", "3d", "networkx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "networkx>=3.2",
    "tree-sitter>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "jinja2>=3.1.0",
]

[project.scripts]
code-graph-4d = "code_graph_4d.main:main"

[project.urls]
Homepage = "https://github.com/MiangChen/code-graph-4d"
Repository = "https://github.com/MiangChen/code-graph-4d"
